[build-system]
requires = ["flit_core >=3.12.0,<4", "setuptools >=80.0", "wheel>=0.45"] # setuptools and wheel needed for Python 3.12 until intake-xarray is updated
build-backend = "flit_core.buildapi"

[dependency-groups]
lint = [
  # Linting tools
  "codespell >=2.4.2",
  "deptry >=0.25.1",
  "flake8 >=7.3.0",
  "flake8-rst-docstrings >=0.4.0",
  "mypy >=1.20.0",
  "numpydoc >=1.10.0",
  "pylint >=4.0.4",
  "ruff >=0.15.9",
  "vulture >=2.14",
  "yamllint >=1.38.0"
]
io = [
  "netCDF4",
  "pooch"
]
test = [
  # Base testing support
  "coverage[toml] >=7.13.4",
  "pytest >=9.0.2",
  "pytest-cov >=7.0.0",
  "tokenize-rt >=3.2.0",
  {include-group = "io"}
]
docs = [
  # Documentation and example support
  "cartopy >=0.23",
  "distributed >=2.0",
  "furo >=2024.8.6",
  "geoviews",
  "hvplot",
  "ipykernel",
  "ipython >=8.10.0",
  "jupyter_client",
  "matplotlib >=3.8.0",
  "nbsphinx >=0.9.8",
  "nc-time-axis",
  "panel",
  "sphinx >=8.2.0",
  "sphinx-codeautolink >=0.16.2",
  "sphinx-copybutton >=0.5.2",
  "sphinx-intl",
  "sphinxcontrib-confluencebuilder"
]
tox = [
  "tox >=4.52.0",
  "tox-gh >=1.7.1"
]
dev = [
  # Development and testing tools
  "bump-my-version >=1.3.0",
  "pip >=26.0.1",
  "prek >=0.3.0",
  "watchdog >=6.0.0",
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "tox"}
]

[project]
name = "xdatasets"
authors = [
  {name = "Sebastien Langlois", email = "sebastien.langlois62@gmail.com"}
]
maintainers = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = [
  "xdatasets",
  "hydrology",
  "meteorology",
  "climate",
  "climatology",
  "netcdf",
  "gridded analysis"
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  # "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "clisops >=0.9.2",
  "dask[array] >=2.6",
  "dask-geopandas >=0.4.1",
  "geopandas >=1.0",
  "intake",
  "intake-geopandas",
  "intake-xarray >=0.6.1,<2.0.0", # FIXME: This needs to be updated to >=2.0.0 to work with Python 3.13. One of the dependencies of <2.0.0 (distutils) is already deprecated in Python 3.12, but accessible through setuptools/wheel.
  "ipython >=8.10.0",
  "numpy >=1.23",
  "pandas >=1.5",
  "s3fs",
  "tqdm",
  "xarray >=2023.1",
  "zarr >=2.11.1"
]

[project.optional-dependencies]
extra = [
  "xagg"
]

[project.urls]
"Homepage" = "https://xdatasets.readthedocs.io/"
"Changelog" = "https://xdatasets.readthedocs.io/en/stable/changelog.html"
"Issue tracker" = "https://github.com/hydrologie/xdatasets/issues"
"Source" = "https://github.com/hydrologie/xdatasets"

[tool]

[tool.bumpversion]
current_version = "0.3.10-dev.1"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/hydrologie/xdatasets>`_ (latest)
----------------------------------------------------------------
"""
replace = """\
..
    `Unreleased <https://github.com/hydrologie/xdatasets>`_ (latest)
    ----------------------------------------------------------------

    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/hydrologie/xdatasets/tree/{new_version}>`_
------------------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
include_bumps = ["release"]
search = "^version: \"[0-9]+\\.[0-9]+\\.[0-9]\""
regex = true
replace = "version: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/xdatasets/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_xdatasets.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
ignore-words-list = "astroid,socio-economic,thirdparty,bu,ue,fpr,mke,fro,te,ot,fo,ded"
skip = "docs/_build"

[tool.coverage.paths]
source = ["src/xdatasets/", "*/site-packages/xdatasets/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true

[tool.deptry.package_module_name_map]
"ipython" = "IPython"

[tool.deptry.per_rule_ignores]
DEP002 = ["dask", "dask-geopandas", "intake-geopandas", "intake-xarray", "s3fs", "zarr"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "docs/notebooks/*.ipynb",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/xdatasets",
  "tests/*.py",
  "tox.toml"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".cruft.json",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  ".zizmor.yml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/xdatasets*.rst",
  "docs/locales"
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "ES01",
  "EX01",
  "GL08",
  "RT01",
  "SA01",
  "SA04"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--color=yes",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = [
  "tests"
]

[tool.ruff]
src = ["xdatasets"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs",
  "tests"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D205", # blank-line-after-summary
  "D400", # First line should end with a period
  "D401", # First line should be in imperative mood
  "E722" # do not use bare except, specify exception instead
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["xdatasets"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/xdatasets/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/xdatasets", "tests"]
sort_by_size = true
